--- a/config/database.yml
+++ b/config/database.yml
@@ -7,7 +7,7 @@ default: &default
 
 development:
   <<: *default
-  database: stephaniecastro_development
+  database: stephaniecastro.me_development
 
   # The specified database role being used to connect to postgres.
   # To create additional roles in postgres see `$ createuser --help`.
@@ -41,7 +41,7 @@ development:
 # Do not set this db to the same as development or production.
 test:
   <<: *default
-  database: stephaniecastro_test
+  database: stephaniecastro.me_test
 
 # As with config/credentials.yml, you never want to store sensitive information,
 # like your database password, in your source code. If your source code is
@@ -64,6 +64,6 @@ test:
 #
 production:
   <<: *default
-  database: stephaniecastro_production
-  username: stephaniecastro
+  database: stephaniecastro.me_production
+  username: stephaniecastro.me
   password: <%= ENV['MYAPP_DATABASE_PASSWORD'] %>
